Use of Paths.get instead of Path.of for java 8 compatibility.